--- a/superzapatos/app/assets/stylesheets/stores.css.scss
+++ b/superzapatos/app/assets/stylesheets/stores.css.scss
@@ -1,16 +1,12 @@
 // Place all the styles related to the Stores controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.remove, .edit {
-	background: none;
-	color: #fff;
-	border: 0;
-	width: 10px;
-}
-.edit {
-	width: 15px;
+
+.summary, .summary a{
+	margin-bottom: 20px;
+	color: #8FD8D8;
 }
 
-.storeItem{
-	
+h2 {
+	text-decoration: underline;
 }
