--- a/superzapatos/app/views/articles/show.html.erb
+++ b/superzapatos/app/views/articles/show.html.erb
@@ -3,6 +3,8 @@
 <p>
   <b>Name:</b>
   <%= @article.name %>
+  <%= link_to link_to image_tag("edit.gif", :border=>0, :class => 'edit'), edit_article_path(@article) %>
+  <%= link_to link_to image_tag("delete.gif", :border=>0, :class => 'delete'), @article, method: :delete, data: { confirm: 'Are you sure?' } %>
 </p>
 
 <p>
@@ -31,5 +33,4 @@
 </p>
 
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
