--- a/superzapatos/app/views/stores/index.html.erb
+++ b/superzapatos/app/views/stores/index.html.erb
@@ -1,12 +1,23 @@
-<h1>Stores</h1>
+<div class="summary">
+<% if !@stores.empty? %>
+	<%= link_to 'Add a Store', new_store_path %> | 
+<% end %>
+<%= link_to "See all articles", articles_path %>
+</div>
+
+<h2>Stores</h2>
 
 <% @stores.each do |store| %>
   <div class="storeItem">
-    <span><%= link_to store.name, store%></span>
-    <span><%= link_to image_tag("delete.gif", :border=>0, :class => 'remove'), store, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+    <strong><span><%= link_to store.name, store%></span></strong> | 
+    <%= link_to "See articles", store_articles_path(store.id) %>
+    <%= link_to link_to image_tag("edit.gif", :border=>0, :class => 'edit'), edit_store_path(store) %>
+    <span><%= link_to image_tag("delete.gif", :border=>0, :class => 'delete'), store, method: :delete, data: { confirm: 'Are you sure?' } %></span>
   </div>
+<% end %>
+<% if @stores.empty? %>
+	<%= link_to 'Be the first to add a store', new_store_path %>	
 <% end %>
 
 <br />
 
-<%= link_to 'New Store', new_store_path %>
